--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Seattle Crime Map</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <style>
+        html, body {
+            background-color:black;
+            height:100%;
+        }
+        #map {
+            height:80%;
+        }
+        #loader-div {
+            align:center;
+            text-align:center;
+        }
+        .iw-label{
+            
+        }
+        .iw-content{
+            color:black;
+        }
+        #dropDownHide{
+            margin-left:20px;
+        }
+        .select-td{
+            margin-left:10px;
+        }
+        .select-text{
+            color:white;
+            opacity:97;
+            font-size:1.1em;
+        }
+        .loader-title{
+            color:white;
+            opacity:.8;
+        }
+
+    </style>
+</head>
+<body>
+    <table id="dropDownHide">
+        <tr>
+            <td class="select-text">select offense: </td>
+            <td><select class="select-td" data-bind="value: selectCrime, options: crimeDropDown, click: test2">crime</select></td>
+        </tr>
+        <tr>
+            <td class="select-text">select date: </td>
+            <td><select class="select-td" data-bind="value: selectDate, options: dateDropDown, click: test">date</select></td>
+        </tr>
+    </table>
+
+    <div id="loader-div">
+            <h1 class="loader-title">Loading Data from seattle.data.gov</h1>
+            <h5>takes up to 15 seconds</h5>
+        <div id="loader-wrapper">
+            <div id="loader"></div>
+        </div>
+    </div>
+
+    <div id="map"></div>
+
+    <script src="HTTPS://maps.googleapis.com/maps/api/js?key=AIzaSyAFDSXEp9yQrC-X1L-smboTPORC5zMgr0A&callback=app" async defer></script>
+    <script src="js/lib/knockout-3.4.0.js"></script>
+    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/setIcon.js"></script>
+    <script src="js/mapBackgroundColor.js"></script>
+    <script src="js/app.js"></script>
+</body>
+</html>
