--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <script src="HTTPS://maps.googleapis.com/maps/api/js?key=AIzaSyAFDSXEp9yQrC-X1L-smboTPORC5zMgr0A&callback=app" async defer></script>
     <script src="js/lib/knockout-3.4.0.js"></script>
-    <script src="js/jquery-3.1.0.min.js"></script>
+    <script src="js/lib/jquery-3.1.0.min.js"></script>
     <script src="js/setIcon.js"></script>
     <script src="js/mapBackgroundColor.js"></script>
     <script src="js/app.js"></script>
