removed google maps api callback

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div id="map"></div>
 
-    <script src="HTTPS://maps.googleapis.com/maps/api/js?key=AIzaSyAFDSXEp9yQrC-X1L-smboTPORC5zMgr0A&callback=app" async defer></script>
+    <script src="HTTPS://maps.googleapis.com/maps/api/js?key=AIzaSyAFDSXEp9yQrC-X1L-smboTPORC5zMgr0A" async defer></script>
     <script src="js/lib/knockout-3.4.0.js"></script>
     <script src="js/lib/jquery-3.1.0.min.js"></script>
     <script src="js/setIcon.js"></script>
