--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Seattle Crime Map</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <style>
         html, body {
-            background-color:black;
+            
             height:100%;
         }
         #map {
