--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <style>
         html, body {
-            
+            background-color:black;
             height:100%;
         }
         #map {
