--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             color:black;
         }
         #dropDownHide{
-            margin:auto;
-            width:50%;            
+        display:block;
+        margin:auto;
+        width:50%;           
         }
         .select-td{
             margin-left:10px;
