updated css on infowindow

--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
             color:white;
             opacity:.8;
         }
-        .iw-label{
-            
-        }
-        .iw-content{
+        .infoWindow{
+            text-align:center;
             color:black;
         }
+        .iw-offense{
+            font-size:1.3em;
+            font-weight:500;
+        }
+        .iw-date{
+            opacity:.6;
+        }
+        .fa-clock-o{
+            margin-left:10px;
+        }
         #dropDownHide{
-        display:block;
-        margin:auto;
-        width:50%;           
+            margin-left: 50px;         
         }
         .select-td{
             margin-left:10px;
@@ -39,6 +45,7 @@
         .select-text{
             color:white;
             opacity:97;
+            font-size:1.1em;
         }
 
 
