--- a/index.html
+++ b/index.html
@@ -38,4 +38,5 @@
     <script src="js/mapBackgroundColor.js"></script>
     <script src="js/app.js"></script>
 </body>
+<link href="https://fonts.googleapis.com/css?family=Lora:700|Open+Sans" rel="stylesheet">
 </html>
